--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "files": ["/dist"],
   "scripts": {
+    "build": "npx tsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "https://github.com/EnrickyHip/easy-shuffle",
