update documentation and create tests

--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
   "name": "easy-shuffle",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "npm package to easily shuffles an array.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["/dist"],
+  "files": [
+    "/dist"
+  ],
   "scripts": {
-    "build": "npx tsx",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --noStackTrace",
+    "test:coverage": "jest --coverage --silent --noStackTrace",
+    "build": "npx tsx"
   },
   "repository": "https://github.com/EnrickyHip/easy-shuffle",
   "homepage": "https://github.com/EnrickyHip/easy-shuffle",
-  "keywords": ["random", "randomize", "array", "shuffle"],
+  "keywords": [
+    "random",
+    "randomize",
+    "array",
+    "shuffle"
+  ],
   "author": "EnrickyHip",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
