--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easy-shuffle",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "npm package to easily shuffles an array.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
     "/dist"
   ],
   "scripts": {
-    "test": "jest --watchAll --noStackTrace",
+    "test": "jest --noStackTrace",
     "test:coverage": "jest --coverage --silent --noStackTrace",
     "build": "npx tsx"
   },
