--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test:coverage": "jest --coverage --silent --noStackTrace",
     "build": "npx tsx"
   },
+  "publishConfig": {
+    "EnrickyHip:registry": "https://npm.pkg.github.com"
+  },
   "repository": "https://github.com/EnrickyHip/easy-shuffle",
   "homepage": "https://github.com/EnrickyHip/easy-shuffle",
   "keywords": [
